--- a/templates/login.html
+++ b/templates/login.html
@@ -15,8 +15,7 @@
 			<div class="w-100"><div id="logo" class="mx-auto"  v-bind:style="{ backgroundImage: 'url(' + storeLogo + ')' }"></div></div>
 		</div>
 			<label id="slogam" class="w-100 text-center  font-size-1 ">
-				<p><b>{{storeText1}}</b></p>
-				<p><b>{{storeText2}}</b></p>
+				<p><b>{{store.nome}}</b></p>
 			</label>
 			<label id="slogam" class="w-100 text-center font-size-2 ">
 				<p>Como quer entrar?</p>
