--- a/templates/create-user-login.html
+++ b/templates/create-user-login.html
@@ -17,6 +17,9 @@
 			<label id="slogam" class="w-100 text-center  font-size-1 ">
 				<p><b>{{store.nome}}</b></p>
 			</label>
+			<label id="slogam" class="w-100 text-center text-danger font-size-2 ">
+				<p>{{menssageError}}</p>
+			</label>
 			<div class="w-100 margin-top-15" >
 				<input v-model="username" placeholder="Digite seu login" class=" text-center big-button-center bg-white rounded-10  font-size-2 hover-opacity-75 d-flex justify-content-center  align-items-center" v-bind:class="{ 'border-danger': !isEmpty(errorUsername) }" @focusout="validUsername">
 			</div>
@@ -58,12 +61,7 @@
 					<label class="d-flex align-self-center">Criar conta</label>
 				</button>
 			</div>
-			
-			<div class="w-100 " >
-				<a :href="'#'+storePath+'/panel'" class="text-decoration-none"><button class="big-button-center bg-white border-0 font-size-2 text-center text-muted hover-opacity-75 d-flex justify-content-center  align-items-center">
-					<label class="">Manter como visitante </label>
-				</button></a>
-			</div>
+		
 			<div class="w-100 margin-top-15" >
 				<a  :href="'#'+storePath+'/'" class="text-decoration-none"><button class="big-button-center bg-white border-0 font-size-2 text-center text-primary hover-opacity-75 d-flex justify-content-center  align-items-center">
 					<label ><svg class="button-mini-squared" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zM142.1 273l135.5 135.5c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L226.9 256l101.6-101.6c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L142.1 239c-9.4 9.4-9.4 24.6 0 34z"/></svg>Voltar</label>
