--- a/templates/order-item.html
+++ b/templates/order-item.html
@@ -1,7 +1,7 @@
 <div id="order_items" class="d-flex justify-content-center flex-wrap h-100">
 	<div class="d-flex align-self-start flex-wrap margin-15 list container-block-by w-100 h-100 ">
 		<div class="w-100 d-flex justify-content-between">
-			<button class="bg-transparent border-0" @click="goBack"><label class="font-size-1  "><svg class="button-mini-squared" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zM142.1 273l135.5 135.5c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L226.9 256l101.6-101.6c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L142.1 239c-9.4 9.4-9.4 24.6 0 34z"/></svg></label></button>	
+			<button class="bg-transparent border-0 position-absolute" @click="goBack"><label class="font-size-1  "><svg class="button-mini-squared" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zM142.1 273l135.5 135.5c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L226.9 256l101.6-101.6c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L142.1 239c-9.4 9.4-9.4 24.6 0 34z"/></svg></label></button>	
 			 <label class="w-100 text-center font-size-1 text-muted">Item Pedido</label>
 		</div>
 		<div v-if="product.pizza" class="w-100 d-flex justify-content-between font-size-button margin-bottom-20">
@@ -30,7 +30,7 @@
 		</div>
 		<div v-else class="w-100 d-flex justify-content-between font-size-button margin-bottom-20">
 			<div class="list-products d-flex justify-content-between mx-auto">
-				<div class="product-image rounded-10 mx-auto" v-bind:style="{ backgroundImage: (product.image_url==null)?'transparent':'url(' + product.image_url + ')' }"></div>
+				<div class="product-image rounded-10 mx-auto" v-bind:style="{ backgroundImage: 'url('+(isEmpty(product.image_url)?emptyPhoto:product.image_url)+')',backgroundSize:'cover'}"></div>
 				
 			</div>
 		</div>
@@ -55,14 +55,14 @@
 					</div>
 					<label class="font-size-3 w-100"> Borda </label>
 					<select v-model="borderPizzaSelected"  class="big-button form-select form-select-lg font-size-2 w-100" @change="changeBorder()">
-						<option disabled  selected>Escolha a Borda</option>
+						<option   selected>Sem Borda</option>
 						<option  v-for="(item) in bordersPizza"  :value="item" :key="item.id">{{item.descricao}}{{(getValueBoderbySize(item.id)==0 || getValueBoderbySize(item.id)==null)?"":" - "+formatMoney(getValueBoderbySize(item.id))}}</option>
 					</select>
 				</div>
 
 
 
-				<div class="accordion  w-100 margin-y-20" id="product">
+				<div v-if="product.pizza" class="accordion  w-100 margin-y-20" id="product">
 					<div class="accordion-item  w-100">
 					  <h2 class="accordion-header  w-100" id="headingOne">
 						<button class="accordion-button  font-size-3 w-100 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -95,6 +95,12 @@
 					  </div>
 					</div>
 				</div>
+
+				<div  class="w-100">
+					<label class="font-size-3 w-100">Observação</label>
+					<textarea v-model="note"  class="big-button font-size-2 w-100"></textarea>
+				</div>
+
 			</div>
 		</div>
 		<div class="w-100 d-flex justify-content-between  margin-top-20 margin-x-15 ">
@@ -109,7 +115,7 @@
 			</div>
 		</div>
 		<div class="d-flex align-self-end justify-content-end margin-15 w-100 ">
-			<button class="font-size-1 border-0 bg-white text-danger">Remover Item</button>
+			<button v-if="hasItem()" class="font-size-1 border-0 bg-white text-danger" @click="removeItem()">Remover Item</button>
 		</div>
 	</div>
 </div>
