--- a/templates/panel.html
+++ b/templates/panel.html
@@ -2,7 +2,7 @@
    	<div class="d-flex align-self-start flex-wrap margin-15 list container-block-by w-100 h-100 ">
 		<div class="w-100 d-flex justify-content-between ">
 			<a :href="'#'+storePath"  class="text-decoration-none"><button class="button-mini-squared font-size-1 bg-danger d-flex rounded-10 text-white hover-opacity-75 d-flex justify-content-center align-items-center border-0"><svg class="button-mini-squared" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor"><path d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"/></svg></button></a>
-			<div id="logo-vertical" v-bind:style="{ backgroundImage: 'url(' + storeVerticalLogo + ')' }"></div>
+			<div id="logo-vertical" v-bind:style="{ backgroundImage: 'url(' + (isEmpty(store.logo_url)?emptyPhoto:store.logo_url) + ')' }"></div>
 			<div class="d-flex border border-primary rounded p-0">
 				<input v-model="inputSearch" class=" d-flex  font-size-1 border-0 search ">
 				<button @click="findGroup" class="d-flex justify-content-center align-items-center button-mini-squared bg-primary m-0 border-primary text-white font-size-1  hover-opacity-75  border-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"/></svg></button>
@@ -32,7 +32,7 @@
 			<div v-for="(groupOfProduct, index) in groupsOfProducts" class="d-flex justify-content-between w-100">
 				<a :href="'#'+storePath+'/produtos/'+groupOfProduct.nome"  class="text-decoration-none">
 					<button class="margin-top-20 big-button-menu flex-wrap justify-content-center align-items-start rounded-10 border-0 bg-danger text-white hover-opacity-75">
-						<label class="w-100 font-size-button"><img class="w-50" :src="groupOfProduct.icone_url"></label>
+						<label class="w-100 font-size-button"><img class="w-50" :src="(isEmpty(groupOfProduct.icone_url)?emptyPhoto:groupOfProduct.icone_url)"></label>
 						<label class="w-100 font-size-1 h-100">{{groupOfProduct.nome}}</label>
 					</button>
 				</a>
