--- a/templates/select-list-address.html
+++ b/templates/select-list-address.html
@@ -1,10 +1,15 @@
-		
-		<div id="profile" class="margin-top-20 d-flex justify-content-center align-content-start flex-wrap " style="height: 10px;">
+		<div class="d-flex align-self-start flex-wrap padding-15 list container-block-by w-100 h-100 ">
+			<div class="w-100 d-flex justify-content-between">
+				<button class="bg-transparent border-0 position-absolute" @click="goBack"><label class="font-size-1  "><svg class="button-mini-squared" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zM142.1 273l135.5 135.5c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L226.9 256l101.6-101.6c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L142.1 239c-9.4 9.4-9.4 24.6 0 34z"/></svg></label></button>	
+				<label class="w-100 text-center font-size-1 text-muted">Seu Pedido</label>
+			</div>		
+		</div>		
+		<div id="profile" class="margin-top-20 d-flex justify-content-center align-content-start flex-wrap " >
 			<div class="margin-top-20 w-100 d-flex d-flex justify-content-center">
 				<div class="w-50">
 					<a :href="'#'+storePath+'/add-new-address'" class="mx-auto">
 						<button class="big-button-center bg-primary text-white rounded-10 font-size-2 hover-opacity-75 d-flex justify-content-center">
-							<label class="d-flex align-self-center">Cadastrar um novo endereço</label>
+							<label class="d-flex align-self-center">Cadastrar novo endereço</label>
 						</button>
 					</a>
 				</div>
@@ -13,15 +18,17 @@
 				<hr class="hr-5 opacity-100" style="background-color:cornflowerblue;">
 				<div class="w-100 " >
 					<div  class="w-100 d-flex justify-content-between mt-0 margin-15">
-						<div class="d-flex flex-wrap ">
+						<div class="w-100 d-flex flex-wrap ">
 							<label class="font-size-3 m-0 text-muted w-100">{{address.logradouro}}, {{address.numero}} {{address.bairro}} {{address.municipio.nome}} - {{address.municipio.uf}}</label>
 							<label class="font-size-2 m-0  w-100"><b>{{address.complemento}} </b></label>
 							<label class="font-size-3 m-0 align-self-end w-100">{{isEmpty(address.cep)?"":"CEP: "+address.cep}}</label>
 						</div>
-
-						<button @click="defineAddressDelivery(address)" class="button-square rounded-10 bg-primary text-white padding-10 hover-opacity-75 m-x-20">
-							<i class="fa-solid fa-location-pin"></i>
-						</button>
+						
+						<div class="d-flex flex-wrap ">
+							<button @click="defineAddressDelivery(address)" class="button-square rounded-10 bg-danger text-white padding-10 hover-opacity-75 ">
+								<svg class="margin-x-15" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 384 512"><path d="M384 192C384 279.4 267 435 215.7 499.2C203.4 514.5 180.6 514.5 168.3 499.2C116.1 435 0 279.4 0 192C0 85.96 85.96 0 192 0C298 0 384 85.96 384 192H384z"/></svg>
+							</button>
+						</div>
 					</div>
 					<hr class=" w-100 margin-15"/>
 				</div>
