--- a/templates/order-detail.html
+++ b/templates/order-detail.html
@@ -89,12 +89,7 @@
 			</label>
 		</p>
 		<hr class="w-100">
-		<p class="w-100 d-flex justify-content-between">
-
-
-			
-
-
+		<p class="w-100 d-flex flex-wrap">
 			<div class="w-100"  v-for="(item, index) in orderItems">
 				<div class="d-flex justify-content-between align-items-end w-100 ">
 					<label class="font-size-2 m-0  ">
